updated pom file

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>POM2023SESSIONS</groupId>
-	<artifactId>POM2023SESSIONS</artifactId>
+	<groupId>POM2023</groupId>
+	<artifactId>POM2023</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>POM2023SESSIONS</name>
@@ -128,8 +128,6 @@
 
 			</plugin>
 
-
-					
 
 		</plugins>
 
